<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/setting"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="UseSwitchCompatOrMaterialXml">

    <!-- 上侧布局 -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/setting_topLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/gradient_background"
        app:layout_constraintBottom_toTopOf="@+id/setting_horizontalLine"
        app:layout_constraintEnd_toEndOf="@id/setting_horizontalLine"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- 设置标题 -->
        <TextView
            android:id="@+id/setting_topLayout_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.119"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <!-- 返回按钮 -->
        <Button
            android:id="@+id/setting_topLayout_button"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:background="#00000000"
            android:text="&lt;"
            android:textSize="27sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/setting_topLayout_textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- 上下侧分隔线 -->

    <View
        android:id="@+id/setting_horizontalLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/setting_bottomLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_horizontalLine">

        <View
            android:id="@+id/setting_bottomLayout_horizontalLine1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />

        <View
            android:id="@+id/setting_bottomLayout_horizontalLine2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <View
            android:id="@+id/setting_bottomLayout_horizontalLine3"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <View
            android:id="@+id/setting_bottomLayout_horizontalLine4"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4" />

        <View
            android:id="@+id/setting_bottomLayout_horizontalLine5"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <View
            android:id="@+id/setting_bottomLayout_horizontalLine6"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6" />

        <TextView
            android:id="@+id/setting_bottomLayout_textview1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sound_play"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/setting_bottomLayout_horizontalLine1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.048"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/setting_bottomLayout_switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            app:layout_constraintBottom_toTopOf="@+id/setting_bottomLayout_horizontalLine1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.93"
            app:layout_constraintStart_toEndOf="@+id/setting_bottomLayout_textview1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/setting_bottomLayout_textview2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/double_click_save"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/setting_bottomLayout_horizontalLine2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.048"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setting_bottomLayout_horizontalLine1"
            app:layout_constraintVertical_bias="0.5" />

        <Switch
            android:id="@+id/setting_bottomLayout_switch2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            app:layout_constraintBottom_toTopOf="@+id/setting_bottomLayout_horizontalLine2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.93"
            app:layout_constraintStart_toEndOf="@+id/setting_bottomLayout_textview2"
            app:layout_constraintTop_toBottomOf="@+id/setting_bottomLayout_horizontalLine1"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/setting_bottomLayout_textview3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_change"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/setting_bottomLayout_horizontalLine3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.048"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setting_bottomLayout_horizontalLine2"
            app:layout_constraintVertical_bias="0.5" />

        <Switch
            android:id="@+id/setting_bottomLayout_switch3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            app:layout_constraintBottom_toTopOf="@+id/setting_bottomLayout_horizontalLine3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.93"
            app:layout_constraintStart_toEndOf="@+id/setting_bottomLayout_textview3"
            app:layout_constraintTop_toBottomOf="@+id/setting_bottomLayout_horizontalLine2"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/setting_bottomLayout_textview4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_information"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/setting_bottomLayout_horizontalLine4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.048"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setting_bottomLayout_horizontalLine3"
            app:layout_constraintVertical_bias="0.5" />

        <Button
            android:id="@+id/setting_bottomLayout_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:onClick="goToMainUser"
            android:text=">"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/setting_bottomLayout_horizontalLine4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@+id/setting_bottomLayout_textview4"
            app:layout_constraintTop_toBottomOf="@+id/setting_bottomLayout_horizontalLine3"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/setting_bottomLayout_textview5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/setting_bottomLayout_horizontalLine5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setting_bottomLayout_horizontalLine4"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/setting_bottomLayout_textview6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="version 1.0"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/setting_bottomLayout_horizontalLine5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toEndOf="@+id/setting_bottomLayout_textview5"
            app:layout_constraintTop_toBottomOf="@+id/setting_bottomLayout_horizontalLine4"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/setting_bottomLayout_textview7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_storage_space"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/setting_bottomLayout_horizontalLine6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.048"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setting_bottomLayout_horizontalLine5"
            app:layout_constraintVertical_bias="0.5" />

        <Switch
            android:id="@+id/setting_bottomLayout_switch4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            app:layout_constraintBottom_toTopOf="@+id/setting_bottomLayout_horizontalLine6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.93"
            app:layout_constraintStart_toEndOf="@+id/setting_bottomLayout_textview7"
            app:layout_constraintTop_toBottomOf="@+id/setting_bottomLayout_horizontalLine5"
            app:layout_constraintVertical_bias="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/setting_bottomLayout_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7" />

        <TextView
            android:id="@+id/setting_bottomLayout_textview8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            android:textColor="#FF0000"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/setting_bottomLayout_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setting_bottomLayout_horizontalLine6"
            app:layout_constraintVertical_bias="0.5" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
