<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/MainPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- 主内容区域 -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/backgroundImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/bg_horizontal"
            android:gravity="center"
            android:textSize="50sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="1"
            app:layout_constraintHeight_percent="1"
            android:scaleType="fitXY"
            app:layout_constraintVertical_chainStyle="spread" />

<!--        <Button-->
<!--            android:id="@+id/GameStart"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/game_start"-->
<!--            android:textSize="70sp"-->
<!--            android:textColor="@color/black"-->
<!--            android:background="@color/transparent"-->
<!--            app:layout_constraintVertical_bias="0.8"-->
<!--            app:layout_constraintHorizontal_bias="0.05"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            android:onClick="StartGame"/>-->
        <include
            android:id="@+id/includeLayout"
            layout="@layout/game_start_button_h"/>

        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/ToggleButton"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- 侧边栏区域 -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/NavigationDrawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_section"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/divider"
            app:layout_constraintHeight_percent="0.35"
            android:background="@android:color/holo_red_light">

            <!-- 头像的圆形图像按钮 -->
            <ImageButton
                android:id="@+id/profileImageButton"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:src="@drawable/profile_image"
                android:background="@drawable/circle_background"
                android:clipToOutline="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintVertical_chainStyle="spread"
                app:layout_constraintVertical_bias="0.45" />

            <!-- 文字标题 -->
            <TextView
                android:id="@+id/nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NickName"
                android:fontFamily="@font/font"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                app:layout_constraintTop_toBottomOf="@id/profileImageButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintVertical_chainStyle="spread"
                app:layout_constraintHorizontal_chainStyle="spread"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- 分割线 -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/top_section"
            app:layout_constraintBottom_toTopOf="@id/bottom_section" >

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- 下半部分 -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottom_section"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@android:color/white">

            <!-- 分类按钮 -->
            <Button
                android:id="@+id/categoryButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/rounded_corners"
                android:text="@string/Sort"
                android:fontFamily="@font/font"
                android:padding="16dp"
                android:gravity="start|center_vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/myButton"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintVertical_chainStyle="spread"
                app:layout_constraintWidth_percent="0.7"
                app:layout_constraintHeight_percent="0.2"
                android:onClick="goToActivity_main"/>

            <!-- 我的按钮 -->
            <Button
                android:id="@+id/myButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/rounded_corners"
                android:text="@string/Mine"
                android:fontFamily="@font/font"
                android:gravity="start|center_vertical"
                app:layout_constraintTop_toBottomOf="@id/categoryButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/settingsButton"
                app:layout_constraintVertical_chainStyle="spread"
                app:layout_constraintHorizontal_chainStyle="spread"
                android:padding="16dp"
                app:layout_constraintWidth_percent="0.7"
                app:layout_constraintHeight_percent="0.2"
                android:onClick="goToMainUser"/>

            <!-- 设置按钮 -->
            <Button
                android:id="@+id/settingsButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/rounded_corners"
                android:text="@string/Settings"
                android:fontFamily="@font/font"
                android:padding="16dp"
                android:gravity="start|center_vertical"
                app:layout_constraintTop_toBottomOf="@id/myButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintVertical_chainStyle="spread"
                app:layout_constraintWidth_percent="0.7"
                app:layout_constraintHeight_percent="0.2"
                android:onClick="goToSetting"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.drawerlayout.widget.DrawerLayout>
